# manila-tempest-plugin

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst
manila_tempest_tests/: config.py  plugin.py  share_exceptions.py  utils.py
manila_tempest_tests/common/: barbican_client_mgr.py  constants.py  remote_client.py  waiters.py
manila_tempest_tests/services/share/: __init__.py
manila_tempest_tests/services/share/json/: shares_client.py
manila_tempest_tests/tests/api/: base.py  test_access_rules_metadata.py  test_access_rules_metadata_negative.py  test_availability_zones.py  test_availability_zones_negative.py  test_backup.py  test_backup_negative.py  test_extensions.py  test_limits.py  test_metadata.py  test_metadata_negative.py  test_microversions.py  test_public_shares.py  test_public_shares_negative.py  test_quotas.py  test_quotas_negative.py  test_replication.py  test_replication_export_locations.py  test_replication_export_locations_negative.py  test_replication_negative.py  test_replication_snapshots.py  test_resource_locks.py  test_resource_locks_negative.py  test_revert_to_snapshot.py  test_revert_to_snapshot_negative.py  test_rules.py  test_rules_negative.py  test_scheduler_hints.py  test_scheduler_hints_negative.py  test_scheduler_stats_negative.py  test_security_services.py  test_security_services_mapping.py  test_security_services_mapping_negative.py  test_security_services_negative.py  test_share_encryption.py  test_share_encryption_negative.py  test_share_group_actions.py  test_share_groups.py  test_share_groups_negative.py  test_share_network_subnet_metadata.py  (+21 more)
manila_tempest_tests/tests/api/admin/: test_admin_actions.py  test_admin_actions_negative.py  test_export_locations.py  (+41 more)
manila_tempest_tests/tests/rbac/: base.py  test_availability_zones.py  test_export_locations.py  test_quotas.py  test_rules.py  test_scheduler_stats.py  test_services.py  test_share_group_types.py  test_share_groups.py  test_share_instance_export_locations.py  test_share_manage.py  test_share_network.py  test_share_type_extra_specs.py  test_share_types.py  test_shares.py  test_snapshots.py  test_user_messages.py
manila_tempest_tests/tests/scenario/: manager.py  manager_share.py  test_share_basic_ops.py  test_share_extend.py  test_share_manage_unmanage.py  test_share_shrink.py
playbooks/manila-tempest-plugin-standalone/: run.yaml
releasenotes/notes/: add-update-access-rules-e43b4d0fbabdb596.yaml  bug-1631314-1509db08c75ff645.yaml  bug-1848278-a37290750e6ac248.yaml  bug-1858024-fa76d4c5b27f099b.yaml  bug-1993283-ee8d329ae65b4f78.yaml  bug-2006792-fix-stop-cleanup-error-2a314862576f655b.yaml  drop-python38-support-07c1fab194bad54a.yaml  graduate-share-migration-feature-26d1e9c7bf3514a8.yaml  nfs-versions-6886a2dd1bab094f.yaml  v1-api-removed-231c029d707b43da.yaml
releasenotes/source/: conf.py  index.rst
roles/set-tempest-config/: README.rst
roles/set-tempest-config/defaults/: main.yml
roles/set-tempest-config/tasks/: main.yml
zuul.d/: manila-tempest-jobs.yaml  manila-tempest-stable-jobs.yaml  manila-tempest-wallaby-jobs.yaml  project.yaml
(+1 files in other folders)
