[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "manila-tempest-plugin"
description = "Tempest plugin manila-tempest-plugin"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://docs.openstack.org/manila/"
Repository = "https://opendev.org/openstack/manila-tempest-plugin/"

[project.entry-points."tempest.test_plugins"]
manila_tests = "manila_tempest_tests.plugin:ManilaTempestPlugin"

[tool.setuptools.packages.find]
include = ["manila_tempest_tests*"]
