[metadata]
name = manila-tempest-plugin
summary = Tempest plugin manila-tempest-plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/manila/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5

[files]
packages =
    manila_tempest_tests

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = manila_tempest_tests/locale
domain = manila_tempest_tests

[update_catalog]
domain = manila_tempest_tests
output_dir = manila_tempest_tests/locale
input_file = manila_tempest_tests/locale/manila-tempest-plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = manila_tempest_tests/locale/manila-tempest-plugin.pot

[entry_points]
tempest.test_plugins =
    manila_tests = manila_tempest_tests.plugin:ManilaTempestPlugin
